--- a/restaurant.html
+++ b/restaurant.html
@@ -28,22 +28,22 @@
   <!-- Beginning main -->
   <main id="maincontent " class="restaurantmainContent">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" tabIndex=-1>
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h1 id="restaurant-name" tabIndex=1></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
+      <address id="restaurant-address" tabIndex=1></address>
       <table id="restaurant-hours"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+      <ul id="reviews-list" ></ul>
     </section>
     <!-- End reviews -->
   </main>
