--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Normalize.css for better cross-browser consistency -->
@@ -17,7 +17,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -29,12 +29,12 @@
   <main id="maincontent " class="restaurantmainContent">
     <!-- Beginning map -->
     <section id="map-container" tabIndex=-1>
-      <div id="map"></div>
+      <div id="map"  aria-label="location" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name" tabIndex=1></h1>
+      <h2 id="restaurant-name" tabIndex=1></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <address id="restaurant-address" tabIndex=1></address>
